# CraftRedirect

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: craft_redirect_server.cpp  craft_redirect_server.hpp  main.cpp
src/command/: command.hpp
src/command/commands/: help_command.cpp  help_command.hpp  online_command.cpp  online_command.hpp  test_command.cpp  test_command.hpp
src/protocol/codec/: packet_decoder.cpp  packet_decoder.hpp  packet_encoder.hpp
src/protocol/nbt/: nbt_base.hpp
src/protocol/nbt/tags/: nbt_tag_byte.cpp  nbt_tag_byte.hpp  nbt_tag_byte_array.cpp  nbt_tag_byte_array.hpp  nbt_tag_compound.cpp  nbt_tag_compound.hpp  nbt_tag_double.cpp  nbt_tag_double.hpp  nbt_tag_float.cpp  nbt_tag_float.hpp  nbt_tag_int.cpp  nbt_tag_int.hpp  nbt_tag_long.cpp  nbt_tag_long.hpp  nbt_tag_short.cpp  nbt_tag_short.hpp  nbt_tag_string.cpp  nbt_tag_string.hpp
src/protocol/packet/: packet.hpp  packet_bound.hpp  packet_registry.cpp  packet_registry.hpp  packet_state.hpp  unknown_packet.cpp  unknown_packet.hpp
src/protocol/packet/packets/client_bound/configuration/: client_known_packs_packet.cpp  client_known_packs_packet.hpp  config_payload_packet.cpp  config_payload_packet.hpp  (+2 more)
src/protocol/packet/packets/server_bound/: handshake_packet.cpp  handshake_packet.hpp
src/protocol/streams/: input_stream.cpp  input_stream.hpp  output_stream.cpp  output_stream.hpp
src/session/: session.cpp  session.hpp
src/streams/: input_stream.cpp  input_stream.hpp  output_stream.cpp  output_stream.hpp
src/test/: test_connection.cpp  test_connection.hpp
(+28 files in other folders)
